--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,90 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/activity_margin_padding"
-    tools:context=".EditorActivity">
+    android:background="@drawable/wall">
 
-    <!-- Overview category -->
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_bottom_linear"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:padding="@dimen/activity_margin"
+        tools:context=".EditorActivity">
 
-        <!-- Label -->
-        <TextView
-            android:text="@string/overview"
-            style="@style/CategoryStyle" />
 
-        <!-- Input fields -->
         <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:paddingLeft="4dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <!-- Name field -->
-            <EditText
-                android:id="@+id/edit_book_name"
-                android:hint="@string/name_hint"
-                style="@style/EditorFieldStyle"
-                android:inputType="textCapWords"/>
+            <TextView
+                style="@style/CategoryStyle"
+                android:text="@string/book_s_name_edit" />
 
-            <!-- Price field -->
-            <EditText
-                android:id="@+id/edit_book_price"
-                android:hint="@string/price_hint"
-                style="@style/EditorFieldStyle"
-                android:inputType="numberDecimal"/>
+            <LinearLayout style="@style/linearEditField">
 
-            <!-- Quantity field -->
-            <EditText
-                android:id="@+id/edit_book_quantity"
-                android:hint="@string/quantity_hint"
-                style="@style/EditorFieldStyle"
-                android:inputType="number" />
+                <EditText
+                    android:id="@+id/edit_book_name"
+                    style="@style/EditorFieldStyle"
+                    android:hint="@string/name_hint"
+                    android:inputType="textCapWords" />
+            </LinearLayout>
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/CategoryStyle"
+                android:text="@string/quantity_edit" />
+
+            <LinearLayout style="@style/linearEditField">
+
+                <Spinner
+                    android:id="@+id/spinner_quantity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/spinner_dimension"
+                    android:paddingRight="@dimen/activity_margin"
+                    android:spinnerMode="dropdown" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/CategoryStyle"
+                android:text="@string/price_edit" />
+
+            <RelativeLayout style="@style/linearEditField">
+
+                <EditText
+                    android:id="@+id/edit_book_price"
+                    style="@style/EditorFieldStyle"
+                    android:hint="@string/price_hint"
+                    android:inputType="numberDecimal" />
+
+                <TextView
+                    android:id="@+id/label_price_units"
+                    style="@style/EditorUnitsStyle"
+                    android:text="@string/currency_edit" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/CategoryStyle"
+                android:text="@string/supplier_name_edit" />
+
+            <LinearLayout style="@style/linearEditField">
+
+                <EditText
+                    android:id="@+id/edit_supplier_name"
+                    style="@style/EditorFieldStyle"
+                    android:hint="@string/supplier_hint"
+                    android:inputType="textCapWords" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/CategoryStyle"
+                android:text="@string/supplier_phone_edit" />
+
+            <LinearLayout style="@style/linearEditField">
+
+                <EditText
+                    android:id="@+id/edit_supplier_phone"
+                    style="@style/EditorFieldStyle"
+                    android:hint="@string/phone_hint"
+                    android:inputType="phone" />
+
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
-
-    <!-- Supplier -->
-    <LinearLayout
-        android:id="@+id/container_supplier"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <!-- Label -->
-        <TextView
-            android:text="@string/supplier"
-            style="@style/CategoryStyle" />
-
-        <!-- Input fields -->
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:orientation="vertical">
-
-            <EditText
-                android:id="@+id/edit_book_supplier"
-                android:hint="@string/supplier_name_hint"
-                style="@style/EditorFieldStyle"
-                android:inputType="textCapWords" />
-
-            <EditText
-                android:id="@+id/edit_book_supplier_number"
-                android:hint="@string/supplier_phone_number_hint"
-                style="@style/EditorFieldStyle"
-                android:inputType="number" />
-
-        </LinearLayout>
-    </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
